<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.spbau.resemblance.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainNickname"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainRatingText"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <Button
            android:text="@string/main_random_game_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainRandomGameButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onRandomGameClick"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

        <Button
            android:text="@string/main_create_game_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainCreateGameButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onCreateGameClick"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />

        <Button
            android:text="@string/main_join_game_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/minJoinGameButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onJoinGameClick" />

        <Button
            android:text="@string/main_card_sets_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainPictureSetButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onSetCardsClick" />

        <Button
            android:text="@string/main_settings_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainSettingsButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="onSettingsClick" />
    </LinearLayout>

</RelativeLayout>
