<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_set"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.spbau.resemblance.CreateSetActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/set_name"
            android:ems="10"
            android:id="@+id/createSetNameField" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/addCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/createSetNewCardButton"
                android:layout_weight="1"
                android:onClick="onAddCardClick" />

            <Button
                android:text="@string/ready"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/createSetDoneButton"
                android:layout_weight="1"
                android:onClick="onDoneClick" />

        </LinearLayout>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/createSetCardsGrid" />

    </LinearLayout>

</RelativeLayout>
